# turbo-clicker

./: CMakeLists.txt  README.md
src/: .clang-format  CMakeLists.txt  test.c
src/driver/: CMakeLists.txt  driver.cpp  driver.h  dummy.cpp  dummy.h  uinput.cpp  uinput.h
src/extra-clicker/: CMakeLists.txt  main.cpp
src/input/: CMakeLists.txt  buttons.h  event.cpp  event.h  input.cpp  input.h
src/turbo-clicker/: CMakeLists.txt  main.cpp
src/watcher/: CMakeLists.txt  buttons.h  event.cpp  event.h  watcher.cpp  watcher.h
